# wasm

bg/: Cargo.toml  makefile
bg-web/: Cargo.toml  makefile  readme.md
bg-web/public/: index.html  index.js
bg-web/src/: lib.rs
bg/public/: index.html  index.js
bg/src/: lib.rs
wat/: main.ts  main.wasm  main.wat  makefile  out.wat
wat/lib/: loop.ts
wat/src/: loop.wat  main.wat
